# excel2db

./: .gitignore  README.md  build_all.py  build_exe.py  pyproject.toml
specs/: excel2sqlite-cli.md  tasks.md
src/excel2sqlite_cli/: cli.py  config.py  excel_reader.py  main.py  models.py  sqlite_writer.py
tests/: test_cli.py  test_config.py  test_excel_reader.py  test_sqlite_writer.py
